Fix spacing on crypto page

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1618,7 +1618,7 @@ section.lazy-placeholder:after {
 }
 .cid-rRtSo1f2xS {
   padding-top: 15px;
-  padding-bottom: 90px;
+  padding-bottom: 0px;
   background-color: #000000;
 }
 .cid-rRtSo1f2xS .mbr-slider .carousel-control {
